0.8:
0.7:
  - Add helpful `locked` decorator that can
    lock a method using a found attribute (a lock
    object or list of lock objects) in the
    instance the method is attached to.
  - Expose top level `try_lock` function.
0.6:
  - Allow the sleep function to be provided (so that
    various alternatives other than time.sleep can
    be used), ie eventlet.sleep (or other).
  - Remove dependency on oslo.utils (replace with
    small utility code that achieves the same effect).
0.5:
  - Make it possible to provide a acquisition timeout
    to the interprocess lock (which when acquisition
    can not complete in the desired time will return
    false).
0.4:
  - Have the interprocess lock acquire take a blocking
    keyword argument (defaulting to true) that can avoid
    blocking trying to acquire the lock
0.3:
  - Renamed from 'shared_lock' to 'fasteners'
0.2.1
  - Fix delay not working as expected
0.2:
  - Add a interprocess lock
0.1:
  - Add travis yaml file
  - Initial commit/import